# merlin-forge-citadel

./: .gitignore  CLAUDE.md  README.md  WORKING_AGREEMENTS.md
.claude/: launch.json
.claude/agents/: code-reviewer.md
.claude/commands/: build.md  handoff.md  status.md  wiki.md
.github/workflows/: README.md  ci.yml
bots/paper-bot/: .dockerignore  Dockerfile  README.md  pyproject.toml
bots/paper-bot/app/: bot.py  client.py  config.py  engine.py  main.py
bots/paper-bot/tests/: test_bot.py  test_client.py  test_config.py  test_contract_version.py  test_engine.py
bots/pifagor/: README.md
bots/pifagor-cartridge/: .dockerignore  Dockerfile  README.md  pyproject.toml  start.sh
bots/pifagor-cartridge/app/: bot.py  client.py  config.py  dynamic_overrides.py  dynamic_universe.py  main.py  mapper.py  prewarm_held.py  reader.py  risk_rebaseline.py  scout_health.py  scout_overrides.py  scout_reader.py  screener.py  signal_journal.py
bots/pifagor-cartridge/tests/: _warm_apply_vendor.py  _warm_gorn_samohod_vendor.py  conftest.py  genome_manifest.json  test_bot.py  test_client.py  test_coins_socket_vendor.py  test_contract_schema.py  test_contract_version.py  test_dynamic_engine_source.py  test_dynamic_overrides.py  test_dynamic_universe.py  test_engine_state.py  test_engine_truth.py  test_genome_drift_guard.py  test_knobs_cap.py  test_mapper.py  test_parity.py  test_prewarm_held.py  test_risk_rebaseline.py  test_scan_now_vendor.py  test_scout_health.py  test_scout_mapper.py  test_scout_overrides.py  test_scout_push.py  test_screener.py  test_signal_journal.py  test_start_gate.py  test_verified_grid.py  test_warm_apply.py  test_warm_gorn_samohod.py
console/: .dockerignore  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
console/src/: App.tsx  index.css  main.tsx
contracts/: README.md  command.schema.json  telemetry-equity.schema.json  telemetry-events.schema.json  telemetry-heartbeat.schema.json  telemetry-scout.schema.json  telemetry-signal-journal.schema.json  telemetry-trades.schema.json
core/: .dockerignore  Dockerfile  README.md  alembic.ini  pyproject.toml  start.sh
core/alembic/: env.py
core/alembic/versions/: 0001_foundation.py  0002_instances.py  0002_users_email.py  0003_jobs.py  0004_telemetry_commands.py  0005_crm.py  0006_billing.py  0007_contract_one_signed.py  0008_billing_lifecycle.py  0009_scout_snapshots.py  0010_screener.py  0011_engine_state.py  0012_basket.py  0013_scout_settings.py  0014_dynamic_settings.py  0015_warm_apply_command.py  0016_signal_journal.py
core/app/: audit.py  auth.py  billing.py  bootstrap.py  commands.py  config.py  context.py  db.py  fleet.py  instance_health.py  jobs.py  logging.py  main.py  models.py  periods.py  readiness.py  routes.py  routes_basket.py  routes_billing.py  routes_commands.py  routes_crm.py  routes_dozor.py  routes_dynamic.py  routes_fleet.py  routes_internal.py  routes_screener.py  routes_telemetry.py  scheduler.py  security.py
core/tests/: conftest.py  crm_helpers.py  test_audit_append_only.py  test_auth.py  test_basket.py  test_billing_engine.py  test_billing_schema.py  test_bootstrap.py  test_commands.py  test_contracts_schemas.py  test_crm_api.py  test_crm_schema.py  test_docs_disabled.py  test_dozor.py  test_dynamic.py  test_engine_state.py  test_fleet.py  test_health.py  test_instance_health.py  test_instances_producer.py  test_jobs.py  test_periods.py  test_readyz.py  test_scheduler.py  test_screener.py  test_telemetry.py
infra/: README.md  docker-compose.dev.yml  env.example
orchestrator/: README.md  pyproject.toml
orchestrator/app/: config.py  core_client.py  main.py  worker.py
orchestrator/app/infra/: base.py  docker.py  fake.py  railway.py
orchestrator/tests/: test_core_client.py  test_infra_conformance.py  test_railway_driver.py  test_worker.py
portal/: README.md
reference/: README.md  fleet-live-config.json  fleet-v3-configdiff.json  malysh-merlin-profile-v8.3.json  perceval-configdiff-b75bd17.json  scout-throughflow-b75bd17.json
wiki/: index.md  log.md  roadmap.md
wiki/concepts/: architecture.md  bot-contract.md  core-api.md  domain-model.md  flows.md  glossary.md  keys-policy.md  seams-review.md  seams.md  telemetry-schemas.md  threat-model.md  vision.md
wiki/decisions/: 0001-platform-vs-engines.md  0002-bot-contract.md  0003-railway-first.md  0004-secrets-envelope.md  0005-client-killswitch.md  0006-ensembles-pipe.md  0007-bot-db-schema-per-instance.md  0008-auth-model.md  0009-jobs-transport.md  0010-key-intake-asymmetric.md  0011-billing-hwm-model.md  0012-healthz-scheduler-deadman.md  0013-instances-deferred-fk.md  0014-malysh-merlin-reference.md  0015-cartridge-deploy-registry-model.md  0016-scout-channel-onboard-scout.md  0017-basket-nabor-1.md  0018-scout-settings-from-core.md  0019-coins-universe-socket-genome.md  0020-dynamic-settings-from-core.md  0021-warm-rhythm-socket-genome.md  0022-f-warm-button-warm-apply-command.md  0023-concurrency-cap-24-dynamic.md  0025-signal-journal-channel.md
wiki/entities/: bitget.md  bybit.md  okx.md  pifagor-engine.md  railway.md
wiki/handoffs/: _TEMPLATE.md  (+19 more)
(+81 files in other folders)
