[project]
name = "mfc-core"
version = "0.1.0"
description = "Merlin Forge Citadel — ядро платформы (core)"
requires-python = ">=3.12"          # цель деплоя — 3.12 (ADR-0003); локально может быть новее
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic-settings>=2.4",
    # sqlalchemy/alembic — добавятся в шаге 2 (миграции); argon2-cffi/pyotp — в шаге 3 (auth)
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",                  # нужен starlette TestClient
    "ruff>=0.6",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]  # ошибки, флейк, импорты, апгрейды синтаксиса, баг-паттерны

[tool.pytest.ini_options]
testpaths = ["tests"]
