[project]
name = "mfc-core"
version = "0.1.0"
description = "Merlin Forge Citadel — ядро платформы (core)"
requires-python = ">=3.12"          # цель деплоя — 3.12 (ADR-0003); локально может быть новее
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic-settings>=2.4",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "psycopg[binary]>=3.2",          # драйвер Postgres (psycopg3): postgresql+psycopg://
    # argon2-cffi/pyotp — добавятся в шаге 3 (auth)
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",                  # нужен starlette TestClient
    "ruff>=0.6",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]  # ошибки, флейк, импорты, апгрейды синтаксиса, баг-паттерны

[tool.ruff.lint.per-file-ignores]
# env.py правит sys.path ДО импортов (стандартный приём alembic) — E402/I001 тут ожидаемы
"alembic/env.py" = ["E402", "I001"]

[tool.ruff.lint.isort]
# папка core/alembic/ (миграции) заставляет ruff считать пакет alembic first-party — чиним
known-third-party = ["alembic"]

[tool.pytest.ini_options]
testpaths = ["tests"]
