[project]
name = "mfc-orchestrator"
version = "0.1.0"
description = "Merlin Forge Citadel — оркестратор (руки платформы): аренда jobs + InfraDriver"
requires-python = ">=3.12"          # цель деплоя — 3.12 (ADR-0003)
dependencies = [
    "httpx>=0.27",                  # клиент internal API ядра (шов S3); MockTransport в тестах
    "pydantic-settings>=2.4",       # конфиг из окружения (12-factor), как в ядре
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008"]

[tool.pytest.ini_options]
testpaths = ["tests"]
