[project]
name = "mfc-paper-bot"
version = "0.1.0"
description = "Merlin Forge Citadel — paper-bot: эталонный картридж Контракта Бота v0"
requires-python = ">=3.12"          # цель деплоя — 3.12 (ADR-0003)
dependencies = [
    "httpx>=0.27",                  # единственная рантайм-зависимость (клиент API S4); минимум зависимостей
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
    "jsonschema>=4.20",             # валидация payload'ов картриджа против contracts/*.schema.json
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008"]

[tool.pytest.ini_options]
testpaths = ["tests"]
